--- a/environment.yml
+++ b/environment.yml
@@ -6,17 +6,19 @@ channels:
   - defaults
 
 dependencies:
-  - python=3.11                   # or 3.11 if all your libs support it
-  - pytorch=2.5.1        # pick the cuda variant you need, e.g.
-                         # pytorch=2.5.1=cuda121* (GPU) or =*cpu* (CPU-only)
+  - pip                        # for any pip-only packages
+  - python                  # or 3.11 if all your libs support it
+  - pytorch>=2.6.0        
   - torchvision
   - torchaudio
   - numpy
-  - sympy=1.13.1         # pin to satisfy PyTorch’s strict requirement
-  - transformers=4.52.4  # pulled from conda-forge
-  - pytorch_geometric=2.6.1  # pulled from conda-forge
+  - transformers # pulled from conda-forge
+  - pytorch_geometric  # pulled from conda-forge
   - datasets
   - scikit-learn
   - peft
   - hydra-core
   - omegaconf
+  - ipykernel
+  - jupyter
+  - biopython
